[package]
name = "wendy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
penrose = {git = "https://github.com/Mstrodl/penrose.git"}
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
x11rb = { version = "0.12.0", features = ["xkb"] }
